--- a/view/tree-triage_entry.xml
+++ b/view/tree-triage_entry.xml
@@ -6,4 +6,5 @@
     <field name="age" />
     <field name="id_display" expand="1" />
     <field name="priority" />
+    <field name="status" />
 </tree>
