--- a/view/tree-queue_entry.xml
+++ b/view/tree-queue_entry.xml
@@ -4,9 +4,10 @@
     <field name="upi_mrn_id" expand="1" />
     <field name="age" />
     <field name="sex" />
-    <!-- <field name="specialty" /> -->
-    <field name="entry_state" />
-    <field name="write_date" widget="text" />
+    <!-- <field name="specialty" />
+    <field name="entry_state" /> -->
+    <field name="last_touch" />
+    <field name="last_toucher" />
     <field name="encounter_components" />
     <field name="encounter_component_count" />
     <!-- <button string="Call" name="btn_call" /> -->
