--- a/view/form-queue_entry.xml
+++ b/view/form-queue_entry.xml
@@ -4,34 +4,43 @@
         <field name="name" colspan="2" />
         <label name="upi_mrn_id" />
         <field name="upi_mrn_id" />
-        <field name="sex" />
-        <field name="age" />
+        <field name="sex" width="60" />
+        <field name="age" width="40" />
+    </group>
+    <group id="queue_item_notes" string="Complaint/Notes" col="6" colspan="6">
+        <field name="notes" colspan="6" height="160" />
         <newline />
-        <field name="encounter_components" colspan="2" />
-        <label name="encounter_component_count" />
-        <field name="encounter_component_count" />
-        <field name="entry_state" />
-        <group id="busy_box" col="2" colspan="1">
-            <label name="busy" />
-            <field name="busy" />
+        <group id="queue_item_encounter_details" string="Encounter Details">
+            <label name="encounter_components" />
+            <field name="encounter_components" />
+            <label name="encounter_component_count" />
+            <field name="encounter_component_count" />
         </group>
     </group>
     <newline />
-    <group id="queue_item_detail" col="6">
-        <label name="triage_entry" />
-        <field name="triage_entry" />
-        <label name="appointment" />
-        <field name="appointment" />
-        <label name="encounter" />
-        <field name="encounter" />
-    </group>
-    <newline />
-    <group id="queue_item_notes" string="Notes/Comments">
-        <field name="notes" colspan="6" />
-    </group>
-    <newline />
-    <group id="queue_item_buttons">
-        <label id="button_space_label" string="Buttons Go Here" />
+    <group id="queue_notes_buttons" col="6" colspan="6">
+        <group id="queue_item_detail" col="2" colspan="5">
+            <label name="triage_entry" />
+            <field name="triage_entry" />
+            <label name="appointment" />
+            <field name="appointment" />
+            <label name="encounter" />
+            <field name="encounter" />
+        </group>
+        <group id="queue_item_buttons" col="1" colspan="1">
+            <group id="busy_box" col="2" colspan="1">
+                <label name="entry_state" />
+                <field name="entry_state" />
+                <label name="busy" />
+                <field name="busy" />
+            </group>
+
+            <button name="btn_call" help="Call in this patient" string="C_all"
+            icon="health-queue-call" />
+            <button name="btn_dismiss" help="Dismiss patient" string="Dismi_ss"
+            icon="health-queue-dismiss" />
+            <button name="btn_inspect" help="Look at the details without calling the patient" icon="health-queue-peek" string="Inspect" />
+        </group>
     </group>
 
 </form>
