queue entry notes get added when one types into the free text field
the most recent note shows at the top of the queue entry notes
the other notes show below the detail notes in reverse crono

--- a/view/tree-queue_entry.xml
+++ b/view/tree-queue_entry.xml
@@ -4,8 +4,8 @@
     <field name="upi_mrn_id" expand="1" />
     <field name="age" />
     <field name="sex" />
-    <!-- <field name="specialty" />
-    <field name="entry_state" /> -->
+    <!-- <field name="specialty" /> -->
+    <field name="entry_state" />
     <field name="last_touch" />
     <field name="last_toucher" />
     <field name="encounter_components" />
