--- a/view/form-queue_entry.xml
+++ b/view/form-queue_entry.xml
@@ -10,6 +10,7 @@
     <group id="queue_item_notes" string="Details/Notes" col="6" colspan="6">
         <field name="notes" colspan="6" height="100" />
         <field name="line_notes" colspan="6" height="40" />
+        <field name="queue_notes" colspan="6" />
     </group>
     <newline />
     <group id="queue_notes_buttons" col="6" colspan="6">
