--- a/view/form-triage_entry.xml
+++ b/view/form-triage_entry.xml
@@ -8,9 +8,12 @@
         <label name="status" />
         <field name="status" />
         <newline />
-        <label string="Name (last, first)" id="lbl_name_fields" />
-        <field name="lastname" />
-        <field name="firstname" />
+        <label name="lastname" />
+        <group id="g_name_fields" colspan="2" col="3">
+            <field name="lastname" />
+            <label name="firstname" />
+            <field name="firstname" />
+        </group>
         <label name="sex" />
         <field name="sex" />
         <label name="age" />
@@ -37,5 +40,6 @@
         </group>
         <newline />
         <field name="notes" colspan="12" />
+        <!-- <field name="queue_entry" states="{'invisible': True}" /> -->
     </group>
 </form>
