show last-call in queue tree

--- a/view/tree-queue_entry.xml
+++ b/view/tree-queue_entry.xml
@@ -6,7 +6,7 @@
     <field name="sex" />
     <!-- <field name="specialty" /> -->
     <field name="entry_state" />
-    <field name="last_touch" />
+    <field name="last_call" />
     <field name="last_toucher" />
     <field name="priority" />
     <field name="encounter_components" />
