--- a/view/tree-queue_entry.xml
+++ b/view/tree-queue_entry.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tree string="Patient Queue">
+    <field name="priority" />
     <field name="name" expand="1" />
-    <field name="upi_mrn_id" expand="1" />
+    <field name="upi_mrn_id" />
     <field name="age" />
     <field name="sex" />
+    <field name="primary_complaint" expand="1" />
     <!-- <field name="specialty" /> -->
     <field name="entry_state" />
     <field name="last_call" />
     <field name="last_toucher" />
-    <field name="priority" />
     <field name="encounter_components" />
     <field name="encounter_component_count" />
     <!-- <button string="Call" name="btn_call" /> -->
