make Glucose show on the triage form as per #105

--- a/view/form-triage_entry.xml
+++ b/view/form-triage_entry.xml
@@ -78,6 +78,8 @@
         <label name="osat"/>
         <field name="osat"/>
 
+        <label name="glucose" />
+        <field name="glucose" />
         <label name="lmp" />
         <field name="lmp" />
         <label name="pregnant"/>
