--- a/view/tree-queue_entry.xml
+++ b/view/tree-queue_entry.xml
@@ -10,6 +10,7 @@
     <field name="last_call" />
     <field name="last_toucher" />
     <field name="specialty" />
+    <field name="visit_reason" />
     <field name="encounter_components" />
     <field name="encounter_component_count" />
     <!-- <button string="Call" name="btn_call" /> -->
