--- a/view/tree-triage_entry.xml
+++ b/view/tree-triage_entry.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tree string="Triage Entries">
     <field name="name" expand="1" />
-    <field name="upi" />
+    <field name="id_display" expand="1" />
     <field name="sex" />
     <field name="age" />
-    <!--<field name="id_display" expand="1" />-->
+    <!--<field name="upi" />-->
     <field name="first_contact_time" expand="1" />
     <field name="priority" />
     <field name="status" />
