Update set-appointment view to end triage and only
set appointment = Arrived if needed

--- a/view/form-queue_appointment.xml
+++ b/view/form-queue_appointment.xml
@@ -7,6 +7,9 @@
     <group id="grp_appt0" string="Appointment" colspan="4" col="6">
         <label id="make_new_cust" string="Create new appointment?" />
         <field name="make_new" />
+        <label name="appointment_arrived" />
+        <field name="appointment_arrived" />
+        <newline />
         <label name="appointment" />
         <field name="appointment" colspan="3" />
         <newline />
