--- a/view/form-triage_entry.xml
+++ b/view/form-triage_entry.xml
@@ -40,11 +40,14 @@
         <label name="complaint" colspan="1" />
         <field name="complaint" colspan="3" />
     </group>
-    <group string="Notes" id="grp_triage_notes" colspan="12" states="{'invisible': Not(Eval('can_do_details', False))}">
+    <group string="Notes" id="grp_triage_notes" colspan="12" states="{'invisible': Not(Eval('can_do_details', False))}" col="12">
         <newline />
-        <field name="notes" colspan="12" />
+        <field name="notes" colspan="4" height="140" />
+        <field name="note_display" colspan="8" height="140" />
     </group>
-    <group id="grp_symptoms" string="Signs/Symptoms" colspan="12" col="8" states="{'invisible': Not(Eval('can_do_details', False))}">
+    <group id="grp_symptoms" string="Syndromes/Surveillance" colspan="12" col="10" states="{'invisible': Not(Eval('can_do_details', False))}">
+        <label name="symp_fever" />
+        <field name="symp_fever" />
         <label name="symp_respiratory" />
         <field name="symp_respiratory" />
         <label name="symp_jaundice" />
@@ -53,7 +56,6 @@
         <field name="symp_rash" />
         <label name="symp_hemorrhagic" />
         <field name="symp_hemorrhagic" />
-        <newline />
         <label name="symp_neurological" />
         <field name="symp_neurological" />
         <label name="symp_arthritis" />
@@ -63,12 +65,10 @@
         <label name="symp_diarrhoea" />
         <field name="symp_diarrhoea" />
         <newline />
-        <label name="symp_fever" />
-        <field name="symp_fever" />
-        <label name="recent_travel_contact" />
+        <label name="recent_travel_contact" colspan="3" />
         <field name="recent_travel_contact" colspan="5" />
     </group>
-    <group colspan="12" col="6" string="Vital Signs" id="group_vital_signs" states="{'invisible': Not(Eval('can_do_details', False))}">
+    <group colspan="12" col="8" string="Vital Signs" id="group_vital_signs" states="{'invisible': Not(Eval('can_do_details', False))}">
         <label name="temperature"/>
         <field name="temperature"/>
         <label name="systolic"/>
@@ -81,20 +81,20 @@
         <field name="respiratory_rate"/>
         <label name="osat"/>
         <field name="osat"/>
-
         <label name="glucose" />
         <field name="glucose" />
-        <label name="lmp" />
-        <field name="lmp" />
-        <label name="pregnant"/>
-        <field name="pregnant"/>
+        <newline />
         <label name="height" />
         <field name="height" />
         <label name="weight" />
         <field name="weight" />
+        <label name="lmp" />
+        <field name="lmp" />
+        <label name="pregnant"/>
+        <field name="pregnant"/>
         <field name="childbearing_age" invisible="1" />
     </group>
-    <group colspan="12" col="6" string="Urinalysis" id="group_nursing_urinalysis" states="{'invisible': Not(Eval('can_do_details', False))}">
+    <group colspan="12" col="10" string="Urinalysis" id="group_nursing_urinalysis" states="{'invisible': Not(Eval('can_do_details', False))}">
         <label name="uri_blood"/>
         <field name="uri_blood" />
         <label name="uri_nitrite"/>
@@ -108,7 +108,7 @@
         <field name="uri_ketone"/>
         <label name="uri_leuko"/>
         <field name="uri_leuko"/>
-        <group id="last_row" col="8" colspan="6">
+<!--         <group id="last_row" col="8" colspan="6"> -->
             <label name="uri_bilirubin"/>
             <field name="uri_bilirubin" />
             <label name="uri_urobili" />
@@ -117,7 +117,7 @@
             <field name="uri_ph"/>
             <label name="uri_specific_gravity"/>
             <field name="uri_specific_gravity"/>
-        </group>
+        <!-- </group> -->
     </group>
     <group id="group_triage_foot" colspan="12" col="6">
         <label name="institution" />
