--- a/view/tree-triage_entry.xml
+++ b/view/tree-triage_entry.xml
@@ -2,8 +2,8 @@
 <tree string="Triage Entries">
     <field name="name" expand="1" />
     <field name="id_display" expand="1" />
-    <field name="sex" />
-    <field name="age" />
+    <field name="sex_display" />
+    <field name="age_display" />
     <!--<field name="upi" />-->
     <field name="first_contact_time" expand="1" />
     <field name="priority" />
